Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <h2>
 <a id="dataset" class="anchor" href="#dataset" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dataset</h2>
 
-<p>We have performed our experiments on the <a href="https://engineering.purdue.edu/%7Ebiehl/MultiSpec/hyperspectral.html">Indian Pines Dataset</a>. The following are the particulars of the dataset: </p>
+<p>We have performed our experiments on the <a href="https://purr.purdue.edu/publications/1947/1">Indian Pines Dataset</a>. The following are the particulars of the dataset: </p>
 
 <ul>
 <li>Source: AVIRIS sensor</li>
