--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 <ol>
 <li>IndianPines_DataSet_Preparation_Without_Augmentation.ipynb</li>
-<li>convolutional_feed.ipynb</li>
+<li>convolutional_feed.ipynb (specify the number of fragments in the training and test data in the variables <code>TRAIN_FILES</code> and <code>TEST_FILES</code>)</li>
 <li>Decoder_Spatial.ipynb (set the required checkpoint to be used for decoding in the <code>model_name</code> variable)</li>
 </ol>
 </li>
@@ -167,7 +167,7 @@
 <h2>
 <a id="acknowledgement" class="anchor" href="#acknowledgement" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Acknowledgement</h2>
 
-<p>This repository was developed by <a href="http://santara.github.io">Anirban Santara</a>, <a href="https://www.linkedin.com/in/pranoot-hatwar-27553579">Pranoot Hatwar</a>, Ankit Singh and <a href="https://www.linkedin.com/in/kaustubh-mani-48363584">Kaustubh Mani</a> under the supervision of <a href="http://cse.iitkgp.ac.in/%7Epabitra/">Prof. Pabitra Mitra</a> during June-July, 2016 at the Deprtment of Computer Science and Engineering, Indian Institute of Technology Kharagpur, India. The project is funded by <a href="http://www.sac.gov.in/">Satellite Applications Centre, Indian Space Research Organization (SAC-ISRO)</a>.  </p>
+<p>This repository was developed by <a href="http://santara.github.io">Anirban Santara</a>, Ankit Singh, <a href="https://www.linkedin.com/in/pranoot-hatwar-27553579">Pranoot Hatwar</a> and <a href="https://www.linkedin.com/in/kaustubh-mani-48363584">Kaustubh Mani</a> under the supervision of <a href="http://cse.iitkgp.ac.in/%7Epabitra/">Prof. Pabitra Mitra</a> during June-July, 2016 at the Deprtment of Computer Science and Engineering, Indian Institute of Technology Kharagpur, India. The project is funded by <a href="http://www.sac.gov.in/">Satellite Applications Centre, Indian Space Research Organization (SAC-ISRO)</a>.  </p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/KGPML/Hyperspectral">Hyperspectral</a> is maintained by <a href="https://github.com/KGPML">KGPML</a>.</span>
