Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 <ul>
 <li>
-<p>Parameter update algorithm used: Mini-batch gradient descent</p>
+<p>Parameter update algorithm used: <a href="http://www.jmlr.org/papers/volume12/duchi11a/duchi11a.pdf">Adagrad</a></p>
 
 <ul>
 <li>Batch size: 200</li>
