Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 <ul>
 <li>
-<p><code>IndianPines_DataSet_Preparation_Without_Augmentation.ipynb</code> does the following operations:</p>
+<p><code>IndianPines_DataSet_Preparation_Without_Augmentation.ipynb</code> - does the following operations:</p>
 
 <ul>
 <li>Loads the Indian Pines dataset</li>
@@ -179,41 +179,41 @@
 <li>Oversamples the training set for balancing the classes</li>
 </ul>
 </li>
-<li><p><code>Spatial_dataset.py</code> provides a highly flexible Dataset class for handling the Indian Pines data.</p></li>
-<li><p><code>patch_size.py</code> specify the required patch-size here.</p></li>
+<li><p><code>Spatial_dataset.py</code> - provides a highly flexible Dataset class for handling the Indian Pines data.</p></li>
+<li><p><code>patch_size.py</code> - specify the required patch-size here.</p></li>
 <li>
-<p><code>IndianPinesCNN.ipynb</code> builds the TensorFlow Convolutional Neural Network and defines the training and evaluation ops:</p>
+<p><code>IndianPinesCNN.ipynb</code>- builds the TensorFlow Convolutional Neural Network and defines the training and evaluation ops:</p>
 
 <ul>
 <li>
-<code>inference()</code> - Builds the model as far as is required for running the network forward to make predictions.</li>
+<code>inference()</code> - builds the model as far as is required for running the network forward to make predictions.</li>
 <li>
-<code>loss()</code> - Adds to the inference model the layers required to generate loss.</li>
+<code>loss()</code> - adds to the inference model the layers required to generate loss.</li>
 <li>
-<code>training()</code> - Adds to the loss model the Ops required to generate and apply gradients.</li>
+<code>training()</code> - adds to the loss model the Ops required to generate and apply gradients.</li>
 <li>
-<code>evaluation()</code> - Calcuates the classification accuracy </li>
+<code>evaluation()</code> - calcuates the classification accuracy </li>
 </ul>
 </li>
-<li><p><code>CNN_feed.ipynb</code> Trains and evaluates the Neural Network using a feed dictionary</p></li>
-<li><p><code>Decoder_Spatial_CNN.ipynb</code> Generates the landcover classification of an input hyperspectral image for a given trained network</p></li>
+<li><p><code>CNN_feed.ipynb</code> - trains and evaluates the Neural Network using a feed dictionary</p></li>
+<li><p><code>Decoder_Spatial_CNN.ipynb</code> - generates the landcover classification of an input hyperspectral image for a given trained network</p></li>
 <li>
-<p><code>IndianPinesMLP.py</code> builds the TensorFlow Multi-layer Perceptron and defines the training and evaluation ops:</p>
+<p><code>IndianPinesMLP.py</code> - builds the TensorFlow Multi-layer Perceptron and defines the training and evaluation ops:</p>
 
 <ul>
 <li>
-<code>inference()</code> - Builds the model as far as is required for running the network forward to make predictions.</li>
+<code>inference()</code> - builds the model as far as is required for running the network forward to make predictions.</li>
 <li>
-<code>loss()</code> - Adds to the inference model the layers required to generate loss.</li>
+<code>loss()</code> - adds to the inference model the layers required to generate loss.</li>
 <li>
-<code>training()</code> - Adds to the loss model the Ops required to generate and apply gradients.</li>
+<code>training()</code> - adds to the loss model the Ops required to generate and apply gradients.</li>
 <li>
-<code>evaluation()</code> - Calcuates the classification accuracy </li>
+<code>evaluation()</code> - calcuates the classification accuracy </li>
 </ul>
 </li>
-<li><p><code>MLP_feed.ipynb</code> Trains and evaluates the MLP using a feed dictionary</p></li>
-<li><p><code>Decoder_Spatial_MLP.ipynb</code> Generates the landcover classification of an input hyperspectral image for a given trained network</p></li>
-<li><p><code>credibility.ipynb</code> Summarizes the predictions of an ensemble and produces the land-cover classification and class-wise confusion matrix.</p></li>
+<li><p><code>MLP_feed.ipynb</code> - trains and evaluates the MLP using a feed dictionary</p></li>
+<li><p><code>Decoder_Spatial_MLP.ipynb</code> - generates the landcover classification of an input hyperspectral image for a given trained network</p></li>
+<li><p><code>credibility.ipynb</code> - summarizes the predictions of an ensemble and produces the land-cover classification and class-wise confusion matrix.</p></li>
 </ul>
 
 <hr>
